# spbau

BigInteger/: CMakeLists.txt
BigInteger/include/: lint.hpp  long_array.hpp  test.hpp
BigInteger/src/: lint.cpp  long_array.cpp  main.cpp
DoubleClass/DoubleNumber/: CMakeLists.txt
DoubleNumber/: CMakeLists.txt
DoubleNumber/include/: double_number.hpp
DoubleNumber/src/: double_number.cpp  main.cpp
HeapSortTemplates/: CMakeLists.txt
HeapSortTemplates/include/: binary_heap.hpp
HeapSortTemplates/src/: main.cpp
Huffman/: CMakeLists (copy).txt  CMakeLists.txt  README  input  main.cpp  out  output  temp
Huffman/include/: BitsOperation.hpp  HuffmanCode.hpp  HuffmanCodeException.hpp  TreeNode.hpp  binary_reader.hpp  binary_writer.hpp  bits_operations.hpp  command_parser.hpp  features.hpp  huffman_tree.hpp  tree_node.hpp
Huffman/src/: BitsOperation.cpp  HuffmanCode.cpp  TreeNode.cpp  binary_reader.cpp  binary_writer.cpp  bits_operations.cpp  command_parser.cpp  huffman_tree.cpp  main.cpp  tree_node.cpp
